--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-header/create-test-header.html
@@ -3,14 +3,14 @@
         <h1 class="pull-left">
             <span [hidden]="!isLabelVisible">
                 <span class="test-name">{{testDetails.testName}}</span>
-                <button type="button" class="icon-btn ml10" (click)="hideEditButton()"><em class="material-icons">edit</em></button>
+                <button type="button" class="icon-btn ml10" [disabled]="testDetails.isLaunched && !testDetails.isPaused" (click)="hideEditButton()"><em class="material-icons">edit</em></button>
             </span>
             <span [hidden]="isLabelVisible">
                 <input type="text" id="name" #box name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test" (keyup)="changeErrorMessage()"
                        [(ngModel)]="testDetails.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" maxlength="150" (focus)="selectAllContent($event)"
                        (click)="$event.preventDefault()" (keyup.enter)="onEnter(box.value)" />
                 <span class="update-btns">
-                    <button type="submit" class="icon-btn ml10" (click)="updateTestName(testDetails.id,testDetails)" [disabled]="name.invalid || isTestNameExist"><em class="material-icons theme-text">check</em></button>
+                    <button type="submit" class="icon-btn ml10"  (click)="updateTestName(testDetails.id,testDetails)" [disabled]="name.invalid || isTestNameExist"><em class="material-icons theme-text">check</em></button>
                     <button type="button" class="icon-btn ml10" (click)="showEditButton(box.value)"><em class="material-icons danger-text">close</em></button>
                 </span>
                 <span class="errors-container">
