--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -34,19 +34,17 @@
                     <div class="form-group ip-restrictions-field">
                         <label>IP Restrictions</label>
                         <br />
-                        <div>
-                            <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testDetails.fromIpAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+                        <div *ngFor="let ip of testDetails.testIPAddress; let i= index">
+                            <input type="text" class="form-control small-width" id="From" name="ip_{{i}}" placeholder="IP Address {{i+1}}" #From=ngModel [(ngModel)]="ip.ipAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+                            <button type="button" class="icon-btn mr10" (click)="removeIpAddress(i,ip.id)"><em class="material-icons danger-text">close</em></button>
                             <br />
                             <div class="errors-container">
                                 <span class="error-msg" *ngIf="From.errors && From.dirty" [hidden]="!From.errors.pattern">Enter IP Address in correct format</span>
                             </div>
                         </div>
+                        <br />
                         <div>
-                            <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testDetails.toIpAddress" #To=ngModel pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
-                            <br />
-                            <div class="errors-container">
-                                <span class="error-msg" *ngIf="To.errors && To.dirty" [hidden]="!To.errors.pattern">Enter IP Address in valid format</span>
-                            </div>
+                            <button type="button" class="btn btn-primary" (click)="addIpFields()">Add IP Address</button>
                         </div>
                     </div>
                     <div class="form-group">
