sonarqube errors resolved

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -33,48 +33,52 @@
                     <h2>All Questions</h2>
                 </div>
                 <div class="block-subtitle clearfix">
-                    <button type="button"  class="btn-link h5 hidden-md hidden-lg"  [mdMenuTriggerFor]="questionMenu"><em class="material-icons">add</em> Add New Question</button>
+                    <button type="button" class="btn-link h5 hidden-md hidden-lg" [mdMenuTriggerFor]="questionMenu"><em class="material-icons">add</em> Add New Question</button>
                     <ul class="difficulty-levels pull-left">
                         <li [ngClass]="{active : selectedDifficulty === DifficultyLevel['All']}" (click)="difficultyWiseSearch('All')" class="h5">Total ({{easy+medium+hard}})</li>
                         <li [ngClass]="{active : selectedDifficulty === DifficultyLevel['Easy']}" (click)="difficultyWiseSearch('Easy')" class="h5">Easy ({{easy}})</li>
                         <li [ngClass]="{active : selectedDifficulty === DifficultyLevel['Medium']}" (click)="difficultyWiseSearch('Medium')" class="h5">Medium ({{medium}})</li>
                         <li [ngClass]="{active: selectedDifficulty === DifficultyLevel['Hard']}" (click)="difficultyWiseSearch('Hard')" class="h5">Hard ({{hard}})</li>
                     </ul>
-                    <button type="button" class="btn-link h5 hidden-sm hidden-xs pull-right" *ngIf ="isCategoryPresent" [mdMenuTriggerFor]="questionMenu"><em class="material-icons">add</em> Add New Question</button>
+                    <button type="button" class="btn-link h5 hidden-sm hidden-xs pull-right" *ngIf="isCategoryPresent" [mdMenuTriggerFor]="questionMenu"><em class="material-icons">add</em> Add New Question</button>
                     <md-menu #questionMenu="mdMenu" [overlapTrigger]="false" xPosition="before">
                         <a md-menu-item [routerLink]="['single-answer']"><em class="material-icons">radio_button_checked</em> Single Answer</a>
                         <a md-menu-item [routerLink]="['multiple-answers']"><em class="material-icons">check_box</em> Multiple Answer</a>
                         <a md-menu-item [routerLink]="['programming']"><em class="material-icons">code</em> Programming</a>
                     </md-menu>
                 </div>
-                <div  class="questions-area" infinite-scroll
+
+                <div class="questions-area" infinite-scroll
                      [infiniteScrollDistance]="2"
                      [infiniteScrollThrottle]="10"
                      [infiniteScrollDisabled]="isAllQuestionsHaveCome"
                      (scrolled)="getQuestionsOnScrolling()">
-                    <div *ngFor="let question of questionDisplay;let i = index" class="qs-block clearfix">
-                        <div class="pull-left">
-                            <div class="qs-container">
-                                <p class="qs-num">Q.{{i+1}}</p>
-                                <div class="qs-text">
-                                    <p [innerHTML]="question.questionDetail" class="question"></p>
-                                    <div *ngFor="let option of question.singleMultipleAnswerQuestion?.singleMultipleAnswerQuestionOption; let j = index">
-                                        <p *ngIf="QuestionType[question.questionType] != QuestionType[2]" [ngClass]="isCorrectAnswer(option.isAnswer)" class="ans-option "><span>{{optionName[j]}}</span> <span>{{option.option}}</span></p>
+                    <h3 *ngIf="!isCategoryPresent">please add category first</h3>
+                    <ng-container *ngIf="isCategoryPresent">
+                        <div *ngFor="let question of questionDisplay;let i = index" class="qs-block clearfix">
+                            <div class="pull-left">
+                                <div class="qs-container">
+                                    <p class="qs-num">Q.{{i+1}}</p>
+                                    <div class="qs-text">
+                                        <p [innerHTML]="question.questionDetail" class="question"></p>
+                                        <div *ngFor="let option of question.singleMultipleAnswerQuestion?.singleMultipleAnswerQuestionOption; let j = index">
+                                            <p *ngIf="QuestionType[question.questionType] != QuestionType[2]" [ngClass]="isCorrectAnswer(option.isAnswer)" class="ans-option "><span>{{optionName[j]}}</span> <span>{{option.option}}</span></p>
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="mt10">
+                                    <p class="tags">{{question.category.categoryName}}</p>
+                                    <p class="tags">{{DifficultyLevel[question.difficultyLevel]}}</p>
+                                </div>
                             </div>
-                            <div class="mt10">
-                                <p class="tags">{{question.category.categoryName}}</p>
-                                <p class="tags">{{DifficultyLevel[question.difficultyLevel]}}</p>
-                            </div>
+                            <em class="material-icons pull-right" [mdMenuTriggerFor]="quesMoreMenu">more_vert</em>
+                            <md-menu #quesMoreMenu="mdMenu" [overlapTrigger]="false" xPosition="before">
+                                <button md-menu-item (click)="editQuestion(question)">Edit</button>
+                                <button md-menu-item (click)="deleteQuestionDialog(question)">Delete</button>
+                                <button md-menu-item (click)="duplicateQuestion(question)">Duplicate</button>
+                            </md-menu>
                         </div>
-                        <em class="material-icons pull-right" [mdMenuTriggerFor]="quesMoreMenu">more_vert</em>
-                        <md-menu #quesMoreMenu="mdMenu" [overlapTrigger]="false" xPosition="before">
-                            <button md-menu-item (click)="editQuestion(question)">Edit</button>
-                            <button md-menu-item (click)="deleteQuestionDialog(question)">Delete</button>
-                            <button md-menu-item (click)="duplicateQuestion(question)">Duplicate</button>
-                        </md-menu>
-                    </div>
+                    </ng-container>
                 </div>
             </div>
         </div>
