--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -31,21 +31,16 @@
                             <span class="error-msg" *ngIf="validEndDate">End DateTime must be greater than Start DateTime</span>
                         </div>
                     </div>
-                    <div class="form-group ip-restrictions-field">
+                    <div class="form-group ip-restrictions">
                         <label>IP Restrictions</label>
-                        <br />
-                        <div *ngFor="let ip of testDetails.testIpAddress; let i= index">
+                        <div class="ip-add-field" *ngFor="let ip of testDetails.testIpAddress; let i= index">
                             <input type="text" class="form-control small-width" id="From" name="ip_{{i}}" placeholder="IP Address {{i+1}}" #From=ngModel [(ngModel)]="ip.ipAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
-                            <button type="button" class="icon-btn mr10" (click)="removeIpAddress(i,ip.id)"><em class="material-icons danger-text">close</em></button>
-                            <br />
+                            <em class="material-icons" (click)="removeIpAddress(i,ip.id)">close</em>
                             <div class="errors-container">
                                 <span class="error-msg" *ngIf="From.errors && From.dirty" [hidden]="!From.errors.pattern">Enter IP Address in correct format</span>
                             </div>
                         </div>
-                        <br />
-                        <div>
-                            <button type="button" class="btn btn-primary" (click)="addIpFields()">Add IP Address</button>
-                        </div>
+                        <button md-mini-fab type="button" (click)="addIpFields()"><md-icon>add</md-icon></button>
                     </div>
                     <div class="form-group">
                         <label>Browser Tolerance</label>
