--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
@@ -20,7 +20,7 @@
         <div class="text-center">
             <h5 class="ptb20">Test once ended, cannot be resumed. Are you sure, you want to end your test?</h5>
             <button type="button" class="btn">Back to Test</button>
-            <button type="button" class="btn btn-primary">End Test</button>
+            <button type="button" class="btn btn-primary" [routerLink]="['test-end']">End Test</button>
         </div>
     </div>
     <test-conduct-footer></test-conduct-footer>
