--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/app.html
@@ -1,36 +1,36 @@
-﻿<div class="main-page">
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#"><img src="/images/logo.png" alt="Logo" height="18" /></a>
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li [routerLinkActive]="['active']"><a href="#" class="h5" [routerLink]="['tests']">Tests</a></li>
-          <li [routerLinkActive]="['active']"><a href="#" class="h5" [routerLink]="['questions']">Questions</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><em class="material-icons">help</em></li>
-          <li class="dropdown">
-            <em class="material-icons" [mdMenuTriggerFor]="userMenu">account_circle</em>
-            <md-menu #userMenu="mdMenu" [overlapTrigger]="false" xPosition="before">
-              <button md-menu-item [routerLink]="['profile']">Profile</button>
-              <button md-menu-item (click)="logOff()">Logout</button>
-            </md-menu>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container -->
-  </nav>
-  <div class="main-content">
-    <router-outlet></router-outlet>
-  </div>
+﻿<div class="main-page" [class.test-preview]="isPageTestPreview">
+    <nav class="navbar navbar-default" >
+        <div class="container" >
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"><img src="/images/logo.png" alt="Logo" height="18" /></a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li [routerLinkActive]="['active']"><a href="#" class="h5" [routerLink]="['tests']">Tests</a></li>
+                    <li [routerLinkActive]="['active']"><a href="#" class="h5" [routerLink]="['questions']">Questions</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><em class="material-icons">help</em></li>
+                    <li class="dropdown">
+                        <em class="material-icons" [mdMenuTriggerFor]="userMenu">account_circle</em>
+                        <md-menu #userMenu="mdMenu" [overlapTrigger]="false" xPosition="before">
+                            <button md-menu-item [routerLink]="['profile']">Profile</button>
+                            <button md-menu-item (click)="logOff()">Logout</button>
+                        </md-menu>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container -->
+    </nav>
+    <div class="main-content">
+        <router-outlet></router-outlet>
+    </div>
 </div>
